# design_patterns

./: README.md  pyproject.toml
scripts/patterns/: template_method.py
